Query strings implementation.

--- a/index.html
+++ b/index.html
@@ -121,7 +121,12 @@
         <div class="row">
           <div class="col-10">
             <div id="found" class="d-block mt-5">
-              <h2 class="text-light">Search results</h2>
+              <div id="artist-area">
+                <h2 class="text-light">Artist section:</h2>
+                <div id="artistSection">
+                </div>
+              </div>
+              <h2 class="text-light">Search results:</h2>
               <div class="spinner-border text-success d-none" role="status" id="spinner">
               </div>
               <div class="row row-cols-1 row-cols-sm-2 row-cols-lg-3 row-cols-xl-4 imgLinks py-3" id="searchSection">
